--- a/KeyControlSB/Info.plist
+++ b/KeyControlSB/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Exchange Keys between iOS and MacOS</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_key-transfer._tcp</string>
+		<string>_key-transfer._udp</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
